# MultipleDirections

./: .gitignore  README.md  pyproject.toml
scipts/: concept_vector.sh  safety_lss_gemma2-2b_logit.sh
scripts/: pythia_concept_vector.sh  pythia_norm.sh  qwen_concept_vector.sh  safety_lss_gemma2-2b_logit.sh
src/: concept_vector.py  each_layer.ipynb  generate_harmbench.ipynb  linearity.py  linearity_old.py  lss_boxplot.ipynb  nonlinear_tokens.ipynb  pca.py  t.ipynb  utils.py
src/notebook/: discussion_28.ipynb  each_layer.ipynb  linearity_size.ipynb  vis_each_layer.ipynb  vis_linearity.ipynb
src/vis/: vis_linearity.ipynb  vis_norm.ipynb
