[project]
name = "multipledirections"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "huggingface-hub>=0.35.3",
    "ipykernel>=6.30.1",
    "loguru>=0.7.3",
    "openai>=2.3.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "transformer-lens>=2.16.1",
    "transformers>=4.57.0",
]
